kubernetes/pterodactyl-wings/prod-d1/wings-endpoint.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  labels:
    app: pterodactyl-wings
    argocd.argoproj.io/instance: pterodactyl-wings
    kubernetes.io/service-name: pterodactyl-wings-service
  name: pterodactyl-wings-endpointslice
  namespace: pterodactyl-wings
addressType: IPv4
ports:
  - name: tls
    port: 443
    protocol: TCP
endpoints:
  - addresses:
      - 10.15.21.150
    conditions: {}
