kubernetes/pterodactyl-wings/prod-d1/wings-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wings-service
  namespace: pterodactyl-wings
  labels:
    app: pterodactyl-wings
spec:
  selector:
    app: pterodactyl-wings
  ports:
    - name: tls
      port: 443
      protocol: TCP
  clusterIP: None
